# luxor-challenge-casimiro

./: README.md  luxor-challenge.md
1-bi-architecture/: README.md  architecture-diagram.mmd  architecture-modern.d2  architecture-oss.d2
2-coding/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
2-coding/db/: schema.sql
2-coding/src/crypto_feed/: __init__.py  alerting.py  bootstrap.py  coingecko.py  config.py  dataflow.py  models.py  sinks.py  sources.py
2-coding/tests/: conftest.py  test_alerting.py  test_coingecko.py
data-platform-architecture/: proposal.md
