[project]
name = "crypto-feed"
version = "0.1.0"
description = "Real-time CoinGecko price feed: stream to TimescaleDB and emit threshold alerts (Bytewax)"
readme = "README.md"
authors = [
    { name = "André Casimiro", email = "ah.casimiro@gmail.com" }
]
# Pinned to <3.13 because bytewax ships no cp313 wheels yet (latest 0.21.1 = cp38..cp312).
requires-python = ">=3.12,<3.13"
dependencies = [
    "bytewax>=0.21,<0.22",
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-mock>=3.14",
    "ruff>=0.6",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
